fix: sticky-comment-header overlap on mobile
Fixes #9648

- Separates issue body header z-index (2) from comment headers (3)
  so comment headers don't get hidden behind the issue body
- On narrow viewports (<=767px), zeroes the PR sticky offset
  to prevent header overlap on mobile where GitHub's tab bar
  may be hidden or compressed
- Bumps mobile comment header z-index to 4 for proper stacking

Closes #9648

--- a/source/features/sticky-comment-header.css
+++ b/source/features/sticky-comment-header.css
@@ -14,19 +14,39 @@ html:not([rgh-OFF-sticky-comment-header]).rgh-show-names {
 	}
 
 	/* Issue body header */
-	[class^='IssueBodyHeader-module__IssueBodyHeaderContainer'],
+	[class^='IssueBodyHeader-module__IssueBodyHeaderContainer'] {
+		position: sticky;
+		z-index: 2;
+		top: calc(
+			var(--base-sticky-header-height, 0px) +
+				var(--rgh-issue-or-pr-sticky-header-height, 0px)
+		);
+	}
+
 	/* Issue/commit comment header */
 	/* Exclude review thread comments (on the "Files changed" tab) */
 	[data-testid='comment-header']:is([id], [id] > *),
 	/* PR body/comment or gist comment header */
 	.timeline-comment-header {
 		position: sticky;
-		/* Prevent header from being covered by media */
+		/* Above issue body header (z-index: 2) so comment headers
+		   don't get hidden behind the issue body when scrolling */
 		z-index: 3;
 		top: calc(
 			var(--base-sticky-header-height, 0px) +
 				var(--rgh-issue-or-pr-sticky-header-height, 0px)
 		);
+	}
+
+	/* On narrow viewports, reduce sticky offset to prevent header overlap */
+	@media (width <= 767px) {
+		react-app[app-name='pull-requests'] {
+			--rgh-issue-or-pr-sticky-header-height: 0px;
+		}
+		[data-testid='comment-header']:is([id], [id] > *),
+		.timeline-comment-header {
+			z-index: 4;
+		}
 	}
 
 	/* Added by `show-names` */
